# FFmpeg-Converter-GTK

./: .gitattributes  .gitignore  FFmpegConverterGTK.desktop  Makefile  README.md  build-debug.sh  build.sh  meson.build  run.sh  uninstall.sh
Developer Tools/: build-debug.sh  build.sh
Resources/: FFmpegConverterGTK.desktop
src/: about-dialog.vala  app-controller.vala  app-settings.vala  audio-settings.vala  base-codec-tab.vala  codec-builder.vala  codec-presets.vala  codec-tab.vala  codec-utils.vala  color-correction-dialog.vala  console-tab.vala  constants.vala  conversion-runner.vala  conversion-utils.vala  converter.vala  crop-overlay.vala  ffprobe-utils.vala  file-pickers.vala  filter-builder.vala  general-tab.vala  hamburger-menu.vala  information-tab.vala  main.vala  operation-output-result.vala  path-breadcrumb.vala  process-runner.vala  progress-tracker.vala  settings-dialog.vala  smart-optimizer.vala  status-area.vala  subtitle-language-guesser.vala  subtitles-runner.vala  subtitles-tab.vala  svt-av1-builder.vala  svt-av1-tab.vala  trim-builder.vala  trim-runner.vala  trim-tab.vala  video-filters.vala  video-player.vala  (+6 more)
src/scripts/: fake-ffmpeg-hang.sh
tests/: subtitle-language-guesser-test.vala
